--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -25,7 +25,7 @@
     </ion-avatar>
     <h2>{{userData.userData[selected].Name}}</h2>
     <p>Telefono: {{userData.userData[selected].Phone}}</p>
-    <button ion-button (tap)="editData()">Editar Informacion</button>
+    <button ion-button (tap)="editData()">Editar Información</button>
 
   </ion-item>
 
