--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -17,7 +17,7 @@
   <ion-list>
     <ion-item (tap)="openDocument()">
       <ion-icon name="document" item-start></ion-icon>
-      <h2>Tramites</h2>
+      <h2>Trámites</h2>
     </ion-item>
     <ion-item (tap)="openMagazine()">
       <ion-icon name="book" item-start></ion-icon>
@@ -25,7 +25,7 @@
     </ion-item>
     <ion-item (tap)="getData(2)">
       <ion-icon name="bookmark" item-start ></ion-icon>
-      <h2>Capacitacíon</h2>
+      <h2>Capacitación</h2>
     </ion-item>
     <ion-item (tap)="getData(0)">
       <ion-icon name="create" item-start></ion-icon>
