--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -13,8 +13,8 @@
 
 
 <ion-content>
-  <ion-searchbar  (ionInput)="getItems($event)"></ion-searchbar>
-  <ion-list >
+  <ion-searchbar placeholder="Buscar" (ionInput)="getItems($event)"></ion-searchbar>
+  <ion-list>
       <ion-item (tap)="openAccount(user)" *ngFor="let user of userContent.users">
           <ion-avatar item-start>
             <img-loader useImg src={{user.Img}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true"></img-loader>
