--- a/src/pages/no-internet/no-internet.html
+++ b/src/pages/no-internet/no-internet.html
@@ -7,6 +7,6 @@
 <ion-content  class="master" style="background-image: url('assets/imgs/background.png');"> 
     <img class="noWifi" src="assets/imgs/region4.png">
    <div padding text-center>
-      <button ion-button color="primary" (click)="tryagain()">Try Again</button>
+      <button ion-button color="primary" (click)="tryagain()">Intentar de Nuevo</button>
    </div>
 </ion-content>
