--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -23,6 +23,10 @@
       <ion-icon name="book" item-start></ion-icon>
       <h2>Revista</h2>
     </ion-item>
+    <ion-item (tap)="openTema()">
+      <ion-icon name="briefcase" item-start></ion-icon>
+      <h2>Tema</h2>
+    </ion-item>
     <ion-item (tap)="getData(2)">
       <ion-icon name="bookmark" item-start ></ion-icon>
       <h2>Capacitación</h2>
