--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -19,19 +19,19 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let chat of test" no-lines>
-      <div class="chat-status" text-center *ngIf="chat.type==='join'||chat.type==='exit';else message">
+      <div class="chat-status fadeIn" text-center *ngIf="chat.type==='join'||chat.type==='exit';else message">
         <span class="chat-date">{{chat.Timestamp | date:'short'}}</span>
         <span class="chat-content-center">{{chat.Message}}</span>
       </div>
       <ng-template #message>
-        <div class="chat-message" text-right *ngIf="chat.Sender === userData.selectedID">
+        <div class="chat-message fadeIn" text-right *ngIf="chat.Sender === userData.selectedID">
           <div class="right-bubble">
             <span class="msg-name">Yo</span>
             <span class="msg-date">{{chat.Timestamp | date:'short'}}</span>
             <p text-wrap>{{chat.Message}}</p>
           </div>
         </div>
-        <div class="chat-message" text-left *ngIf="chat.Sender !== userData.selectedID">
+        <div class="chat-message fadeIn" text-left *ngIf="chat.Sender !== userData.selectedID">
           <div class="left-bubble">
             <span class="msg-name">{{userData.getUserName(chat.Sender)}}</span>
             <span class="msg-date">{{chat.Timestamp | date:'short'}}</span>
