--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -10,8 +10,8 @@
   <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
     <ion-tab [root]="tab1Root" tabTitle="Inicio" tabIcon="home"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Buscar" tabIcon="search"></ion-tab>
-    <ion-tab [root]="tab3Root" tabTitle="Temas" tabIcon="briefcase"></ion-tab>
     <ion-tab [root]="tab4Root" tabTitle="Servicios" tabIcon="add"></ion-tab>
     <ion-tab [root]="tab5Root" tabTitle="Cuenta" tabIcon="contact"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Mensajes" tabIcon="chatbubbles"></ion-tab>
   </ion-tabs>
 </ion-content>
