--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwPTu_XBkCoq7x_tip5nRTCPZSlGh8HsM&callback=initMap"
     async defer></script>
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
   <script src="build/polyfills.js"></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
