--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -15,9 +15,16 @@
 
 <ion-content padding>
   <ion-list>
+    <ion-list-header>
+      <ion-label>Legal</ion-label>
+    </ion-list-header>
     <ion-item (tap)="openWebsite('Canalava')">Mas Informacion</ion-item>
-    <ion-item (tap)="openWebsite('Privacy')" >Terminos y Condiciones</ion-item>
+    <ion-item (tap)="openWebsite('Privacy')">Terminos y Condiciones</ion-item>
     <ion-item (tap)="openWebsite('Terms')">Poliza de Seguridad</ion-item>
+    <ion-list-header>
+        <ion-label>Cuenta</ion-label>
+      </ion-list-header>
+      <ion-item (tap)="changePassword()">Cambiar Contraseña</ion-item>
     <ion-item (tap)="signOut()">Salir</ion-item>
   </ion-list>
 </ion-content>
