--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -9,9 +9,11 @@
 <ion-content padding>
   <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
     <ion-tab [root]="tab1Root" tabTitle="Inicio" tabIcon="home"></ion-tab>
-    <ion-tab [root]="tab2Root" tabTitle="Buscar" tabIcon="search"></ion-tab>
-    <ion-tab [root]="tab4Root" tabTitle="Servicios" tabIcon="add"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Directorio" tabIcon="search"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Manchas" tabIcon="appname-customicon">
+    </ion-tab>
+    <ion-tab [root]="tab4Root" tabTitle="Blog" tabIcon="md-document"></ion-tab>
     <ion-tab [root]="tab5Root" tabTitle="Cuenta" tabIcon="contact"></ion-tab>
-    <ion-tab [root]="tab3Root" tabTitle="Mensajes" tabIcon="chatbubbles"></ion-tab>
+
   </ion-tabs>
 </ion-content>
