--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -10,7 +10,7 @@
   <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
     <ion-tab [root]="tab1Root" tabTitle="Inicio" tabIcon="home"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Directorio" tabIcon="search"></ion-tab>
-    <ion-tab [root]="tab3Root" tabTitle="Manchas" tabIcon="appname-customicon">
+    <ion-tab [root]="tab3Root" tabTitle="Manchas" tabIcon="appname-customicon3">
     </ion-tab>
     <ion-tab [root]="tab4Root" tabTitle="Blog" tabIcon="md-document"></ion-tab>
     <ion-tab [root]="tab5Root" tabTitle="Cuenta" tabIcon="contact"></ion-tab>
