--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -24,7 +24,7 @@
       <img-loader useImg src={{userData.ProfileImg}} fallbackUrl="/assets/imgs/Unknown.png" spinner="true"></img-loader>
     </ion-avatar>
     <h2>{{userData.Name}}</h2>
-    <p>Telefono :  <a href={{userData.Phone}}>{{userData.Phone}}</a></p>
+    <p>Telefono :  <a href="{{'tel: +' + userData.Phone}}">{{userData.Phone}}</a></p>
   </ion-item>
   <div padding>
     <ion-segment [(ngModel)]="displayMode">
