--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -7,25 +7,20 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Manchas</ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-  <ion-list>
-    <ion-item (tap)="getData('Lav')">
-      <ion-icon name="appname-customicon1" item-start></ion-icon>
-      <h2>Lavanderia</h2>
-    </ion-item>
-    <ion-item (tap)="getData('Tint')">
-      <ion-icon name="appname-customicon2" item-start></ion-icon>
-      <h2>Tintorería</h2>
-    </ion-item>
-    <ion-item (tap)="getData('Tint')">
-      <ion-icon name="appname-customicon" item-start></ion-icon>
-      <h2>Wet-Cleaning</h2>
+<ion-content padding >
+  <ion-list *ngIf="array$ | async; let array">
+    <ion-item *ngFor="let item of array"  (tap)="getData(item)">
+      <ion-icon *ngIf="item.icon != ''" name="{{item.icon}}" item-start></ion-icon>
+      <ion-avatar item-start *ngIf="item.icon == ''" >
+        <ion-text-avatar  style.background={{color}} item-start>{{item.name | letters}}</ion-text-avatar>
+      </ion-avatar>
+      <h2>{{item.name}}</h2>
     </ion-item>
   </ion-list>
 </ion-content>
